Adding PG database connector lib and refactoring contract data.

--- a/back-end/.env-cloud
+++ b/back-end/.env-cloud
@@ -3,3 +3,4 @@ BASE_PATH=
 HOST_NAME=
 NODE_ENV=
 NODE_OPTIONS=
+DATABASE_URL=postgresql://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]
