--- a/back-end/package.json
+++ b/back-end/package.json
@@ -41,6 +41,7 @@
     "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.1",
+    "@types/pg": "^8.6.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
@@ -63,6 +64,7 @@
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
+    "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6",
     "ts-jest": "^27.0.7",
     "winston": "^3.3.3"
