--- a/back-end/package.json
+++ b/back-end/package.json
@@ -36,6 +36,7 @@
     }
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
     "@types/jest": "^27.0.1",
@@ -59,6 +60,8 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "eslint-plugin-jest": "^24.1.0",
