[ back-end ]: Adding controller, routes and service to create and make login

--- a/back-end/.env-cloud
+++ b/back-end/.env-cloud
@@ -4,3 +4,5 @@ HOST_NAME=
 NODE_ENV=
 NODE_OPTIONS=
 DATABASE_URL=postgresql://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]
+JWT_TOKEN_SECRET=
+JWT_TOKEN_EXPIRY_TIME_IN_MINUTES=720
