--- a/back-end/package.json
+++ b/back-end/package.json
@@ -36,6 +36,7 @@
     }
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -66,6 +67,7 @@
     "dotenv": "^8.2.0",
     "eslint-plugin-jest": "^24.1.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "swagger-ui-express": "^4.1.6",
