--- a/front-end/tsconfig.json
+++ b/front-end/tsconfig.json
@@ -1,8 +1,14 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["dom", "dom.iterable"],
-    "types": ["jest", "node"],
+    "lib": [
+      "dom",
+      "dom.iterable"
+    ],
+    "types": [
+      "jest",
+      "node"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -11,12 +17,19 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "isolatedModules": false,
+    "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "react"
   },
-  "include": ["src"],
+  "include": [
+    "src"
+  ],
   "extends": "./node_modules/react-redux-typescript-scripts/tsconfig.json",
-  "exclude": ["node_modules", "__tests__/*.test.ts"],
-  "typeRoots": ["node_modules/@types"]
+  "exclude": [
+    "node_modules",
+    "__tests__/*.test.ts"
+  ],
+  "typeRoots": [
+    "node_modules/@types"
+  ]
 }
