[ document ]: Updating documentation

--- a/back-end/.env-cloud
+++ b/back-end/.env-cloud
@@ -1,8 +1,6 @@
-PORT=
-BASE_PATH=
-HOST_NAME=
-NODE_ENV=
-NODE_OPTIONS=
+PORT=4000
+BASE_PATH=/api/v1
+NODE_ENV=dev
 DATABASE_URL=postgresql://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]
-JWT_TOKEN_SECRET=
-JWT_TOKEN_EXPIRY_TIME_IN_MINUTES=720
+JWT_TOKEN_SECRET=secreat
+JWT_TOKEN_EXPIRY_TIME_IN_MINUTES=120
