--- a/back-end/package.json
+++ b/back-end/package.json
@@ -16,8 +16,8 @@
   "main": "server.js",
   "scripts": {
     "build": "rimraf ./build && tsc",
-    "start:prd": "npm run build && node build/server.js",
-    "start": "nodemon",
+    "start": "npm install && npm run build && node build/server.js",
+    "start:dev": "nodemon",
     "lint": "eslint . --ext .ts",
     "prettier-format": "run-script-os",
     "prettier-format:win32": "prettier --config .prettierrc \"./src/**/*.ts\" --write",
@@ -36,31 +36,31 @@
     }
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "nodemon": "^2.0.14",
+    "onchange": "^6.1.0",
+    "prettier": "^1.19.1",
+    "run-script-os": "^1.1.1"
+  },
+  "dependencies": {
     "@types/jsonwebtoken": "^8.5.5",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
-    "@types/jest": "^27.0.1",
     "@types/morgan": "^1.9.1",
     "@types/node": "^14.0.1",
     "@types/pg": "^8.6.1",
     "@types/swagger-ui-express": "^4.1.3",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-prettier": "^3.1.2",
-    "husky": "^4.2.3",
+    "@types/jest": "^27.0.1",
     "jest": "^27.3.1",
-    "nodemon": "^2.0.14",
-    "onchange": "^6.1.0",
-    "prettier": "^1.19.1",
-    "rimraf": "^3.0.2",
-    "run-script-os": "^1.1.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.4.2"
-  },
-  "dependencies": {
+    "typescript": "^4.4.2",
+    "rimraf": "^3.0.2",
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
