--- a/back-end/.env-cloud
+++ b/back-end/.env-cloud
@@ -1,4 +1,5 @@
 PORT=4000
+HOST_NAME=
 BASE_PATH=/api/v1
 NODE_ENV=dev
 DATABASE_URL=postgresql://[user[:password]@][netloc][:port][/dbname][?param1=value1&...]
